--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,15 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.16.2
-	yarn_mappings=1.16.2+build.21
-	loader_version=0.9.2+build.206
+	minecraft_version=1.17-pre1
+	yarn_mappings=1.17-pre1+build.1
+	loader_version=0.11.3
 
 # Mod Properties
-	mod_version = 1.1.1
+	mod_version = 1.1.1+1.17
 	maven_group = com.minenash
 	archives_base_name = rebind-all-the-keys
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.19.0+build.398-1.16
+	fabric_version=0.34.8+1.17
