--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,15 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.17-pre1
-	yarn_mappings=1.17-pre1+build.1
-	loader_version=0.11.3
+	minecraft_version=1.18
+	yarn_mappings=1.18+build.1
+	loader_version=0.12.8
 
 # Mod Properties
-	mod_version = 1.1.1+1.17
+	mod_version = 1.1.1+1.18
 	maven_group = com.minenash
 	archives_base_name = rebind-all-the-keys
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.34.8+1.17
+	fabric_version=0.44.0+1.18
