--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,16 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-	# check these on https://fabricmc.net/use
-	minecraft_version=1.18
-	yarn_mappings=1.18+build.1
-	loader_version=0.12.8
+	# check these on https://fabricmc.net/develop
+	minecraft_version=1.19
+	yarn_mappings=1.19+build.2
+	loader_version=0.14.7
 
 # Mod Properties
-	mod_version = 1.1.1+1.18
+	mod_version = 1.1.1+1.19
 	maven_group = com.minenash
 	archives_base_name = rebind-all-the-keys
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.44.0+1.18
+	fabric_version=0.56.0+1.19
