--- a/gradle.properties
+++ b/gradle.properties
@@ -3,14 +3,14 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/develop
-	minecraft_version=1.19.4
-	yarn_mappings=1.19.4+build.1
-	loader_version=0.14.18
+	minecraft_version=1.20-rc1
+	yarn_mappings=1.20-rc1+build.2
+	loader_version=0.14.21
 
 # Mod Properties
-	mod_version = 1.2.1+1.19.4
+	mod_version = 1.2.1+1.20
 	maven_group = com.minenash
 	archives_base_name = rebind-all-the-keys
 
 # Dependencies
-	fabric_version=0.76.0+1.19.4
+	fabric_version=0.83.0+1.20
