--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/develop
-	minecraft_version=1.20-rc1
-	yarn_mappings=1.20-rc1+build.2
-	loader_version=0.14.21
+	minecraft_version=1.20.1
+	yarn_mappings=1.20.1+build.10
+	loader_version=0.14.22
 
 # Mod Properties
 	mod_version = 1.2.1+1.20
@@ -13,4 +13,4 @@ org.gradle.jvmargs=-Xmx1G
 	archives_base_name = rebind-all-the-keys
 
 # Dependencies
-	fabric_version=0.83.0+1.20
+	fabric_version=0.86.1+1.20.1
